@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Nov-2010 Jean-Marie Simonet
+ # Added icon for the new My Profile menu [#23347]
+ 
 17-Nov-2010 Andrew Eddie
  # Fixed issue [#23347] Move profile editing out of com_users and into com_admin
   
